--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
                     <div class="portfolio-content">
                         
                         <div class="portfolio-text">
-                            <h3>Infinite Agency CRM</h3>
+                            <h3 data-lang="portfolio.infinite.title">Infinite Agency CRM</h3>
                             <div class="portfolio-image">
                                 <img src="assets/infiniteagencycrm.png" alt="Infinite Agency CRM" class="portfolio-logo">
                             </div>
-                            <p class="portfolio-description">Se desarrolló una landing page moderna y profesional para Infinite Agency CRM, destacando sus soluciones de CRM personalizado. La página presenta un diseño elegante con esquema de colores oscuro y dorado, enfocándose en comunicar los beneficios de un CRM completamente personalizado para empresas.</p>
+                            <p class="portfolio-description" data-lang="portfolio.infinite.description">Se desarrolló una landing page moderna y profesional para Infinite Agency CRM, destacando sus soluciones de CRM personalizado. La página presenta un diseño elegante con esquema de colores oscuro y dorado, enfocándose en comunicar los beneficios de un CRM completamente personalizado para empresas.</p>
                             <div class="portfolio-buttons">
-                                <a href="https://infiniteagencycrm.com" target="_blank" rel="noopener noreferrer" class="btn-portfolio-primary">Ver Landing Page</a>
+                                <a href="https://infiniteagencycrm.com" target="_blank" rel="noopener noreferrer" class="btn-portfolio-primary" data-lang="portfolio.infinite.button">Ver Landing Page</a>
                             </div>
                         </div>
                     </div>
@@ -224,8 +224,8 @@
                 <div class="service-card">
                     <div class="service-content">
                         <div class="service-text">
-                            <h3>Gestión de reservas</h3>
-                            <h4>Organiza tus citas y reservas de forma eficiente</h4>
+                            <h3 data-lang="services.reservas.title">Gestión de reservas</h3>
+                            <h4 data-lang="services.reservas.subtitle">Organiza tus citas y reservas de forma eficiente</h4>
                         </div>
                         <div class="crm-illustration">
                             <div class="hubspot-logo-container">
