--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sav Solutions - Soluciones web a tu medida</title>
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://savsolutionsuy.com/">
+    <meta property="og:title" content="Sav Solutions - Soluciones web a tu medida">
+    <meta property="og:description" content="Desarrollo de páginas web funcionales y adaptadas a tu marca. Soluciones digitales para emprendimientos y pequeñas empresas.">
+    <meta property="og:image" content="https://savsolutionsuy.com/assets/ogimagesav.jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Sav Solutions">
+    
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://savsolutionsuy.com/">
+    <meta name="twitter:title" content="Sav Solutions - Soluciones web a tu medida">
+    <meta name="twitter:description" content="Desarrollo de páginas web funcionales y adaptadas a tu marca. Soluciones digitales para emprendimientos y pequeñas empresas.">
+    <meta name="twitter:image" content="https://savsolutionsuy.com/assets/ogimagesav.jpeg">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
