--- a/index.html
+++ b/index.html
@@ -184,6 +184,26 @@
                     <div class="portfolio-content">
 
                         <div class="portfolio-text">
+                            <h3 data-lang="portfolio.cockpit.title">Cockpit UY</h3>
+                            <div class="portfolio-image">
+                                <img src="assets/ogimage1200x630.png" alt="Cockpit UY" class="portfolio-logo">
+                            </div>
+                            <p class="portfolio-description" data-lang="portfolio.cockpit.description">Se desarrolló una
+                                pagina de e-commerce moderna y profesional para Cockpit UY, completamente conectada a
+                                Shopify.</p>
+                            <div class="portfolio-buttons">
+                                <a href="https://cockpituy.com" target="_blank" rel="noopener noreferrer"
+                                    class="btn-portfolio-primary" data-lang="portfolio.cockpit.button">Ver
+                                    E-commerce</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-card">
+                    <div class="portfolio-content">
+
+                        <div class="portfolio-text">
                             <h3 data-lang="portfolio.infinite.title">Infinite Agency CRM</h3>
                             <div class="portfolio-image">
                                 <img src="assets/infiniteagencycrm.png" alt="Infinite Agency CRM"
